Update sell data analyst.ipynb

--- a/sell data analyst.ipynb
+++ b/sell data analyst.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\Ak Gorwal\\Downloads\\Sales Data.csv\", encoding='unicode_escape')"
+    "df = pd.read_csv("Sales Data.csv\", encoding='unicode_escape')"
    ]
   },
   {
